--- a/NDVI_script.ipynb
+++ b/NDVI_script.ipynb
@@ -81,7 +81,20 @@
    "id": "1188a2f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "###define the key variables for the function, below.\n",
+    "###note that image is defined above\n",
+    "ndvi_plot_title = [\"Your ndvi plot name\"]\n",
+    "cmap = \"RdYlGn\"\n",
+    "vmin = -1\n",
+    "vmax = 1\n",
+    "\n",
+    "#and for the classification\n",
+    "ndvi_classes = [-np.inf, 0, 0.15, 0.3, 0.5, np.inf]\n",
+    "ndvi_colours = [\"blue\", \"green\", \"yellow\", \"red\", \"pink\"]\n",
+    "ndvi_class_names = [\"one\", \"two\", \"three\", \"four\", \"five\"]\n",
+    "classification_plot_title = [\"Your classification plot name\"]"
+   ]
   },
   {
    "cell_type": "code",
