Minor changes to scripts
Added descriptions of the variables required in the function's docstrings. I will need to use the markdown function to add some proper text explanations (like a tutorial).

--- a/NDMI_Script.ipynb
+++ b/NDMI_Script.ipynb
@@ -31,7 +31,10 @@
     "###Ensure the bands are sorted in order\n",
     "image_path.sort()\n",
     "###Stack the bands into a single image. Give the no data values.\n",
-    "image, meta = es.stack(image_path, nodata=-9999)\n"
+    "image, meta = es.stack(image_path, nodata=-9999)\n",
+    "\n",
+    "###if you want to check the band order you can uncomment the line below\n",
+    "###print(image_path)\n"
    ]
   },
   {
@@ -53,41 +56,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###define the key variables for the function, below.\n",
-    "###note that image is defined above when stacking the bands together\n",
-    "###name the raw ndmi plot\n",
-    "ndmi_plot_title = \"Your ndmi plot name\"\n",
-    "###define the colour map. \"RdYlGn\" (continuous scale red -> green) is recommended. Other options\n",
-    "###available at https://matplotlib.org/stable/tutorials/colors/colormaps.html\n",
-    "ndmi_cmap = \"PRGn\"\n",
-    "\n",
-    "#vmin and vmax are parameters for plotting the raw ndmi values. Depending on your dataset you might want to bring these\n",
-    "###closer to zero to better show the spread of your data!\n",
-    "vmin = -1\n",
-    "vmax = 1\n",
-    "\n",
-    "###below you can specify how many classes you like. Classes defined below are -np.inf (lowest value in dataset) -> 0,\n",
-    "###0 -> 0.15, 0.15 -> 0.3, 0.3 -> 0.5 and 0.5 -> +np.inf (highest value in dataset). 5 classes have been set here.\n",
-    "ndmi_classes = [-np.inf, 0, 0.15, 0.3, 0.5, np.inf]\n",
-    "\n",
-    "###and then specify the colours for the classes, make sure this matches the number of classes above\n",
-    "ndmi_colours = [\"lightblue\", \"grey\", \"yellow\", \"lightgreen\", \"green\"]\n",
-    "\n",
-    "###and name the classes. Again, make sure this matches the number of classes.\n",
-    "ndmi_class_names = [\"class one\", \"class two\", \"class three\", \"class four\", \n",
-    "                    \"class five\"]\n",
-    "\n",
-    "###and name your final classification plot's title\n",
-    "classification_plot_title = \"Your ndmi classification plot name\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ac77eca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def ndmi (image, ndmi_plot_title, ndmi_cmap, vmin, vmax,\n",
     "          ndmi_classes, ndmi_colours, ndmi_class_names,\n",
     "          classification_plot_title):\n",
@@ -95,10 +63,16 @@
     "    This function will run a normalised difference moisture index(ndmi) on an image defined by the user. \n",
     "    It is programmed to use bands 5 and 6 from Landsat 8.\n",
     "    If using Landsat 4-7 change the function as explained below. The output from this function is a raw ndmi of the image,\n",
-    "    and a classification of the image based on the ndmi values. The variables required to customise the output are above.\n",
+    "    and a classification of the image based on the ndmi values. \n",
+    "    The variables required to customise the output are the image for analysis, the name of the raw ndmi plot, the \n",
+    "    continuous colour palette for the ndmi plot, the min and max values to plot on the ndmi, the classes for the ndmi \n",
+    "    classification, the specific colours for the ndmi classification, the class name and the name for the classified \n",
+    "    ndmi plot.\n",
+    "    These variables are explained below, too.\n",
     "    '''\n",
     "    \n",
-    "    ###Here we define the two bands as floats used to calculate the NDVI: red band and near infrared (NIR) band. \n",
+    "    ###Here we define the two bands as floats used to calculate the NDMI: near infrared (NIR) bands and short-wave\n",
+    "    ###infrared (SWIR) band. \n",
     "    ###Keep [4] and [5] if using Landsat 8. Change to [3] and [4] if using Landsat 4-7.   \n",
     "    nir = image[4].astype(float)\n",
     "    swir = image[5].astype(float)\n",
@@ -137,7 +111,42 @@
     "    ax.set_axis_off()\n",
     "\n",
     "    ###auto adjust subplot to fit figure size\n",
-    "    plt.tight_layout()\n",
+    "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ac77eca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###define the key variables for the function, below.\n",
+    "###note that image is defined above when stacking the bands together\n",
+    "###name the raw ndmi plot\n",
+    "ndmi_plot_title = \"Your ndmi plot name\"\n",
+    "###define the colour map. \"RdYlGn\" (continuous scale red -> green) is recommended. Other options\n",
+    "###available at https://matplotlib.org/stable/tutorials/colors/colormaps.html\n",
+    "ndmi_cmap = \"PRGn\"\n",
+    "\n",
+    "#vmin and vmax are parameters for plotting the raw ndmi values. Depending on your dataset you might want to bring these\n",
+    "###closer to zero to better show the spread of your data!\n",
+    "vmin = -1\n",
+    "vmax = 1\n",
+    "\n",
+    "###below you can specify how many classes you like. Classes defined below are -np.inf (lowest value in dataset) -> 0,\n",
+    "###0 -> 0.15, 0.15 -> 0.3, 0.3 -> 0.5 and 0.5 -> +np.inf (highest value in dataset). 5 classes have been set here.\n",
+    "ndmi_classes = [-np.inf, 0, 0.15, 0.3, 0.5, np.inf]\n",
+    "\n",
+    "###and then specify the colours for the classes, make sure this matches the number of classes above\n",
+    "ndmi_colours = [\"lightblue\", \"grey\", \"yellow\", \"lightgreen\", \"green\"]\n",
+    "\n",
+    "###and name the classes. Again, make sure this matches the number of classes.\n",
+    "ndmi_class_names = [\"class one\", \"class two\", \"class three\", \"class four\", \n",
+    "                    \"class five\"]\n",
+    "\n",
+    "###and name your final classification plot's title\n",
+    "classification_plot_title = \"Your ndmi classification plot name\"\n",
     "    "
    ]
   },
