--- a/NDVI_script.ipynb
+++ b/NDVI_script.ipynb
@@ -5,12 +5,21 @@
    "id": "67e2d356",
    "metadata": {},
    "source": [
-    "# Something"
+    "# Something this must be filled in\n",
+    "this\n",
+    "needs\n",
+    "some\n",
+    "words\n",
+    "in\n",
+    "it\n",
+    "as\n",
+    "an\n",
+    "explanation!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e0e8606e",
    "metadata": {},
    "outputs": [],
@@ -29,10 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "946b9144",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Image\\\\LC08_L1TP_207023_20211122_20211130_01_T1_B1.TIF', 'Image\\\\LC08_L1TP_207023_20211122_20211130_01_T1_B2.TIF', 'Image\\\\LC08_L1TP_207023_20211122_20211130_01_T1_B3.TIF', 'Image\\\\LC08_L1TP_207023_20211122_20211130_01_T1_B4.TIF', 'Image\\\\LC08_L1TP_207023_20211122_20211130_01_T1_B5.TIF', 'Image\\\\LC08_L1TP_207023_20211122_20211130_01_T1_B6.TIF', 'Image\\\\LC08_L1TP_207023_20211122_20211130_01_T1_B7.TIF']\n"
+     ]
+    }
+   ],
    "source": [
     "###To start, set the path to open your image. In this example the image bands are in a folder called \"Image\" in the \n",
     "###working directory. B* means that the script will read in all band tifs collectively rather than having to code each one.\n",
@@ -41,6 +58,9 @@
     "image_path.sort()\n",
     "###Stack the bands into a single image. Give the no data values.\n",
     "image, meta = es.stack(image_path, nodata=-9999)\n",
+    "\n",
+    "###if you want to check the band order you can uncomment the line below\n",
+    "###print(image_path)\n",
     "\n"
    ]
   },
@@ -63,41 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###define the key variables for the function, below.\n",
-    "###note that image is defined above when stacking the bands together\n",
-    "###name the raw ndvi plot\n",
-    "ndvi_plot_title = \"Your ndvi plot name\"\n",
-    "###define the colour map. For example, \"RdYlGn\" (continuous scale red -> green) is often used for NDVI. Other options\n",
-    "###available at https://matplotlib.org/stable/tutorials/colors/colormaps.html\n",
-    "ndvi_cmap = \"RdYlGn\"\n",
-    "\n",
-    "#vmin and vmax are parameters for plotting the raw ndvi values. Depending on your dataset you might want to bring these\n",
-    "###closer to zero to better show the spread of your data!\n",
-    "vmin = -1\n",
-    "vmax = 1\n",
-    "\n",
-    "###below you can specify how many classes you like. Classes defined below are -np.inf (lowest value in dataset) -> 0,\n",
-    "###0 -> 0.15, 0.15 -> 0.3, 0.3 -> 0.5 and 0.5 -> +np.inf (highest value in dataset). 5 classes have been set here.\n",
-    "ndvi_classes = [-np.inf, 0, 0.15, 0.3, 0.5, np.inf]\n",
-    "\n",
-    "###and then specify the colours for the classes, make sure this matches the number of classes above\n",
-    "ndvi_colours = [\"lightblue\", \"grey\", \"yellow\", \"lightgreen\", \"green\"]\n",
-    "\n",
-    "###and name the classes. Again, make sure this matches the number of classes.\n",
-    "ndvi_class_names = [\"class one\", \"class two\", \"class three\", \"class four\", \n",
-    "                    \"class five\"]\n",
-    "\n",
-    "###and name your final classification plot's title\n",
-    "classification_plot_title = \"Your ndvi classification plot name\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ada30ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def ndvi (image, ndvi_plot_title, ndvi_cmap, vmin, vmax, \n",
     "          ndvi_classes, ndvi_colours, ndvi_class_names, \n",
     "          classification_plot_title):\n",
@@ -105,7 +90,11 @@
     "    This function will run a normalised difference vegetation index(ndvi) on an image defined by the user. \n",
     "    It is programmed to use bands 4 and 5 from Landsat 8.\n",
     "    If using Landsat 4-7 change the function as explained below. The output from this function is a raw ndvi of the image,\n",
-    "    and a classification of the image based on the ndvi values. The variables required to customise the output are above.\n",
+    "    and a classification of the image based on the ndvi values. \n",
+    "    The variables required to customise the output are the image for analysis, the name of the raw ndvi plot, \n",
+    "    the continuous colour palette for the ndvi plot, the min and max values to plot on the ndvi, the classes for the ndvi \n",
+    "    classification, the specific colours for the ndvi classification, the class name and the name for the classified ndvi plot.\n",
+    "    These variables are explained below, too.\n",
     "    '''\n",
     "    \n",
     "    ###Here we define the two bands as floats used to calculate the NDVI: red band and near infrared (NIR) band. \n",
@@ -149,6 +138,41 @@
     "\n",
     "    ###auto adjust subplot to fit figure size\n",
     "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ada30ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###this is an example with some of the variables for the function above.\n",
+    "###note that image is defined above when stacking the bands together\n",
+    "###name the raw ndvi plot\n",
+    "ndvi_plot_title = \"Your ndvi plot name\"\n",
+    "###define the colour map. For example, \"RdYlGn\" (continuous scale red -> green) is often used for NDVI. Other options\n",
+    "###available at https://matplotlib.org/stable/tutorials/colors/colormaps.html\n",
+    "ndvi_cmap = \"RdYlGn\"\n",
+    "\n",
+    "#vmin and vmax are parameters for plotting the raw ndvi values. Depending on your dataset you might want to bring these\n",
+    "###closer to zero to better show the spread of your data!\n",
+    "vmin = -1\n",
+    "vmax = 1\n",
+    "\n",
+    "###below you can specify how many classes you like. Classes defined below are -np.inf (lowest value in dataset) -> 0,\n",
+    "###0 -> 0.15, 0.15 -> 0.3, 0.3 -> 0.5 and 0.5 -> +np.inf (highest value in dataset). 5 classes have been set here.\n",
+    "ndvi_classes = [-np.inf, 0, 0.15, 0.3, 0.5, np.inf]\n",
+    "\n",
+    "###and then specify the colours for the classes, make sure this matches the number of classes above\n",
+    "ndvi_colours = [\"lightblue\", \"grey\", \"yellow\", \"lightgreen\", \"green\"]\n",
+    "\n",
+    "###and name the classes. Again, make sure this matches the number of classes.\n",
+    "ndvi_class_names = [\"class one\", \"class two\", \"class three\", \"class four\", \n",
+    "                    \"class five\"]\n",
+    "\n",
+    "###and name your final classification plot's title\n",
+    "classification_plot_title = \"Your ndvi classification plot name\""
    ]
   },
   {
