Minor Change to functions
Changed the function to read the number of classes of the length of the list of class names supplied by the user (this reduces the change of getting an error as the user does not have to edit the function).

--- a/NDMI_Script.ipynb
+++ b/NDMI_Script.ipynb
@@ -98,7 +98,7 @@
     "    ###the mask returns a value of 'NONE' as a class. This will give an error message that there are more classes (n+1) than\n",
     "    ###colours in cmap (n). We can remove this. (The example in the function has n = 9 classes). Make sure the number (9)\n",
     "    ###matches how many classes are named above\n",
-    "    classes = classes[0:5]\n",
+    "    classes = classes[0:len(ndmi_class_names)]\n",
     "\n",
     "    ###plot your data using variables defined by user.\n",
     "    fig, ax = plt.subplots(figsize=(14, 14))\n",
