Introductory markdown text added
An introductory markdown paragraph has been added to each script. This introduces the script and has a brief explanation of the theory of behind analysis (NDVI/NDMI)

--- a/NDMI_Script.ipynb
+++ b/NDMI_Script.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e51b2692",
+   "metadata": {},
+   "source": [
+    "# NDMI Script\n",
+    "This is a script designed to import bands of an image from Landsat 4, 5, 6 or 8 satellites and stack them into a single image. Subsequently, it runs a normalised difference moisture index (NDMI) on the stacked image. Lastly, the raw NDMI values are classified with the user inputting the specific classes. \n",
+    "NDVI is a commonly used remote sensing tool to assess the water content of vegetation, and makes use of the near infrared (NIR) and shortwave infrared (SWIR) bands. NDMI values can range from -1 to 1. The higher the value, the more water that is present! NDMI is calculated as NDMI = (NIR - SWIR)/(NIR + SWIR).\n",
+    "Each step of the script, and it's accompanying parameters, are explained below! \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e0a57b6d",
