Final Edits Made
Tested Environment yml to create a new environment and run. Everything worked (including earthpy!).
Made a few edits to the scripts to make them more presentable.

Any questions or general interest, reach out to me! :)

--- a/NDMI_Script.ipynb
+++ b/NDMI_Script.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "# NDMI Script\n",
     "This is a script designed to import bands of an image from Landsat 4, 5, 6 or 8 satellites and stack them into a single image. Subsequently, it runs a normalised difference moisture index (NDMI) on the stacked image. Lastly, the raw NDMI values are classified with the user inputting the specific classes. \n",
+    "\n",
+    "\n",
     "NDVI is a commonly used remote sensing tool to assess the water content of vegetation, and makes use of the near infrared (NIR) and shortwave infrared (SWIR) bands. NDMI values can range from -1 to 1. The higher the value, the more water that is present! NDMI is calculated as NDMI = (NIR - SWIR)/(NIR + SWIR).\n",
+    "\n",
+    "\n",
     "Each step of the script, and it's accompanying parameters, are explained below! \n"
    ]
   },
@@ -94,7 +98,7 @@
     "    ep.plot_bands(my_ndmi, cmap = ndmi_cmap, title = ndmi_plot_title, vmin = vmin, vmax = vmax)\n",
     "    \n",
     "    ###Below we take the output array for our ndmi calculated above and give each value the integer value of the \n",
-    "    ###classes variables that it falls into\n",
+    "    ###'classes' variable that it falls into\n",
     "    image_ndmi_class = np.digitize(my_ndmi, ndmi_classes)\n",
     "    ### Apply a 'no data' mask to the array. This will remove no value data entries\n",
     "    image_ndmi_class = np.ma.masked_where(np.ma.getmask(my_ndmi), image_ndmi_class)\n",
@@ -107,8 +111,8 @@
     "    classes = np.unique(image_ndmi_class)\n",
     "    classes = classes.tolist()\n",
     "    ###the mask returns a value of 'NONE' as a class. This will give an error message that there are more classes (n+1) than\n",
-    "    ###colours in cmap (n). We can remove this. (The example in the function has n = 9 classes). Make sure the number (9)\n",
-    "    ###matches how many classes are named above\n",
+    "    ###colours in cmap (n). We can remove this. The number of classes will equals the length of the list of colours when\n",
+    "    ###the user defines them\n",
     "    classes = classes[0:len(ndmi_class_names)]\n",
     "\n",
     "    ###plot your data using variables defined by user.\n",
@@ -136,8 +140,7 @@
     "###note that image is defined above when stacking the bands together\n",
     "###name the raw ndmi plot\n",
     "ndmi_plot_title = \"Your ndmi plot name\"\n",
-    "###define the colour map. \"RdYlGn\" (continuous scale red -> green) is recommended. Other options\n",
-    "###available at https://matplotlib.org/stable/tutorials/colors/colormaps.html\n",
+    "###define the colour map. Other options available at https://matplotlib.org/stable/tutorials/colors/colormaps.html\n",
     "ndmi_cmap = \"PRGn\"\n",
     "\n",
     "#vmin and vmax are parameters for plotting the raw ndmi values. Depending on your dataset you might want to bring these\n",
@@ -216,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
