--- a/NDVI_script.ipynb
+++ b/NDVI_script.ipynb
@@ -6,8 +6,12 @@
    "metadata": {},
    "source": [
     "# NDVI Script\n",
-    "This is a script designed to import bands of an image from Landsat 4, 5, 6 or 8 satellites and stack them into a single image. Subsequently, it runs a normalised difference vegetation index (NDVI) on the stacked image. Lastly, the raw NDVI values are classified with the user inputting the specific classes. \n",
-    "NDVI is a commonly used remote sensing tool to assess vegetation health, and makes use of the near infrared (NIR) and red bands. Plant chlorophyll, which increases in healthy vegetation, reflection decreases in the red band while increasing in the NIR band, so by calculating the ratio between them as NDVI = (NIR - Red)/(NIR + Red) we can assess the vegetative health. NDVI values can range from -1 to 1. The higher the value the healthier the vegetation!\n",
+    "This is a script designed to import bands of an image from Landsat 4, 5, 6 or 8 satellites and stack them into a single image. Subsequently, it runs a normalised difference vegetation index (NDVI) on the stacked image. Lastly, the raw NDVI values are classified with the user inputting the specific classes.\n",
+    "\n",
+    "\n",
+    "NDVI is a commonly used remote sensing tool to assess vegetation health, and makes use of the near infrared (NIR) and red bands. Plant chlorophyll's (which increases in healthy vegetation) reflection decreases in the red band while increasing in the NIR band, so by calculating the ratio between them as NDVI = (NIR - Red)/(NIR + Red) we can assess the vegetative health. NDVI values can range from -1 to 1. The higher the value the healthier the vegetation! <br>\n",
+    "\n",
+    "\n",
     "Each step of the script, and it's accompanying parameters, are explained below! \n"
    ]
   },
@@ -73,9 +77,9 @@
     "          ndvi_classes, ndvi_colours, ndvi_class_names, \n",
     "          classification_plot_title):\n",
     "    '''\n",
-    "    This function will run a normalised difference vegetation index(ndvi) on an image defined by the user. \n",
+    "    This function will run a normalised difference vegetation index (ndvi) on an image defined by the user. \n",
     "    It is programmed to use bands 4 and 5 from Landsat 8.\n",
-    "    If using Landsat 4-7 change the function as explained below. The output from this function is a raw ndvi of the image,\n",
+    "    If using Landsat 4-7, edit the function as explained below. The output from this function is a raw ndvi of the image,\n",
     "    and a classification of the image based on the ndvi values. \n",
     "    The variables required to customise the output are the image for analysis, the name of the raw ndvi plot, \n",
     "    the continuous colour palette for the ndvi plot, the min and max values to plot on the ndvi, the classes for the ndvi \n",
@@ -95,7 +99,7 @@
     "    ep.plot_bands(my_ndvi, cmap = ndvi_cmap, title = ndvi_plot_title, vmin = vmin, vmax = vmax)\n",
     "    \n",
     "    ###Below we take the output array for our ndvi calculated above and give each value the integer value of the \n",
-    "    ###classes variables that it falls into\n",
+    "    ###'classes' variable that it falls into\n",
     "    image_ndvi_class = np.digitize(my_ndvi, ndvi_classes)\n",
     "    ### Apply a 'no data' mask to the array. This will remove no value data entries\n",
     "    image_ndvi_class = np.ma.masked_where(np.ma.getmask(my_ndvi), image_ndvi_class)\n",
